Update pathing for hero and logo images, and fix aligning of navbar.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
   --primary-color: #262626;
   --secondary-color: #F9F9F9;
   --text-color: #838383;
-  --accent-color: #9B9A84;
+  --accent-color: #7a918d;
   --white-color: #FFFFFF;
   --divider-color: #EEEDED;
   --dark-divider-color: #FFFFFF1A;
@@ -92,6 +92,14 @@ a {
 
 #navigation-logo {
   z-index: 5;
+  display: flex;
+  align-items: center;
+}
+
+#navigation-bar-logo,
+#navigation-logo a {
+  height: 42px;
+  display: inline-block;
 }
 
 #navigation-menu {
@@ -108,12 +116,17 @@ a {
 
 #navigation-menu li:last-child {
   margin-right: 0;
+  padding: 0;
+}
+
+#navigation-menu .dark-button {
+  text-transform: none;
 }
 
 /* 05. Hero Section */
 
 #hero {
-  background-image: url("https://images.unsplash.com/photo-1609840588437-293d7d0af08a?q=80&w=1925&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-image: url("../img/hero/hero.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
